<resources>
    <string name="app_name">Ojo Mager</string>
    <string name="app_first_name">Ojo\nMager</string>
    <string name="app_all_capital_name">OJO\nMAGER</string>
    <string name="create_account">Create Account</string>
    <string name="email_example">youremail@domain.com</string>
    <string name="name_example">Your Name</string>
    <string name="password_example">yourpassword123</string>
    <string name="have_account">Already have account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="dont_have_account">Dont have an account?</string>
    <string name="account">Account</string>
    <string name="report">Report</string>
    <string name="reminder">Reminder</string>
    <string name="training_plans">Training Plans</string>
    <string name="discovery">Discovery</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="set_goal">Set A Goal</string>
    <string name="set_weekly_goal">Set your weekly goal</string>
    <string name="set_weekly_goal_desc">We recommend training at least 3 days weekly for a better result</string>
    <string name="weekly_training_days">Weekly training days</string>
    <string name="first_day_of_week">First day of week</string>
    <string name="week_goal">WEEK GOAL</string>
    <string name="weekly_goal_desc">Set weekly goals for a better body shape</string>
    <string name="zero">0</string>
    <string name="workout">WORKOUT</string>
    <string name="kcal">KCAL</string>
    <string name="minutes">MINUTE(S)</string>
    <string name="save">Save</string>
    <string name="days">Four Days</string>

    <string name="first_label_challenge">7x4 CHALLENGE</string>
    <string name="full_body">FULL BODY</string>
    <string name="lower_body">LOWER BODY</string>
    <string name="hot">HOT</string>
    <string name="second_label_challenge">QUARANTINE AT HOME</string>

    <string name="example_item_title">Example Item Title</string>
    <string name="example_item_desc">Example Item Desc</string>

    <string-array name="weekly">
        <item>1 Day</item>
        <item>2 Days</item>
        <item>3Days</item>
        <item>4 Days</item>
        <item>5 Days</item>
        <item>6 Days</item>
        <item>7 Days</item>
    </string-array>

    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="select_time">Select Time</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="cancel_reminder">Cancel Reminder</string>
    <string name="best_quarantine_desc">5 Workouts</string>
    <string name="beginner">BEGINNER</string>
    <string name="intermediate">INTERMEDIATE</string>
</resources>