<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activities.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="338dp"
        android:layout_height="654dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/bg_auth">

        <TextView
            android:id="@+id/tv_title_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/montserrat_black"
            android:text="@string/app_first_name"
            android:textColor="#900C3E"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.235"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/create_account"
            android:textColor="#868686"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.317"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_app" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/rounded_edit_text"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:hint="@string/email_example"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.613"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_screen" />

        <EditText
            android:id="@+id/edt_fullname"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/rounded_edit_text"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:hint="@string/name_example"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.613"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/rounded_edit_text"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:hint="@string/password_example"
            android:inputType="textPassword"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.613"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_fullname" />

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="27dp"
            android:text="@string/create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.613"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password" />

        <TextView
            android:id="@+id/tv_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/have_account"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_create_account" />

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/sign_in"
            android:textColor="#4B94EE"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toEndOf="@+id/tv_have_account"
            app:layout_constraintTop_toBottomOf="@+id/btn_create_account" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>